--- a/collab.html
+++ b/collab.html
@@ -24,7 +24,7 @@
     <main>
         <h2>Click images or arrows to view more</h2>
         <div class="slideShow">
-            <img src="./images/groups/slideShowTitle01.png" onclick="openMainModal(); currentMainSlide(1)" alt="">
+            <img src="./images/groups/collab.png" onclick="openMainModal(); currentMainSlide(1)" alt="">
 
             <div id="myMainModal" class="modal">
                 <span class="close cursor" onclick="closeMainModal()">&times;</span>
@@ -33,39 +33,31 @@
                     <button class="prev" onclick="plusMainSlides(-1)">&#10094;</button>
 
                     <div class="mainSlides">
-                        <span class="numberText">1/9</span>
-                        <img src="./images/groups/slideShowTitle01.png" alt="">
-                    </div>
-                    <div class="mainSlides">
-                        <span class="numberText">2/9</span>
-                        <img src="./images/groups/cloneVsBranch.png" alt="">
-                    </div>
-                    <div class="mainSlides">
-                        <span class="numberText">3/9</span>
+                        <span class="numberText">1/7</span>
                         <img src="./images/groups/collab.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">4/9</span>
-                        <img src="./images/groups/sharedRepo.png" alt="">
+                        <span class="numberText">2/7</span>
+                        <img src="./images/groups/cloneVsBranch.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">5/9</span>
-                        <img src="./images/groups/pullRequestFlow.png" alt="">
+                        <span class="numberText">3/7</span>
+                        <img src="./images/init/CreateRepo.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">6/9</span>
-                        <img src="./images/groups/pullRequestFlow02.png" alt="">
+                        <span class="numberText">4/7</span>
+                        <img src="./images/init/ImportantInformation.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">7/9</span>
+                        <span class="numberText">5/7</span>
                         <img src="./images/branching/gitBranch.png" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">8/9</span>
+                        <span class="numberText">6/7</span>
                         <img src="./images/branching/gitflow02.jpeg" alt="">
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">9/9</span>
+                        <span class="numberText">7/7</span>
                         <img src="./images/branching/gitflow03.png" alt="">
                     </div>
 
@@ -73,31 +65,25 @@
 
                     <div class="row">
                         <span class="column">
-                            <img src="./images/groups/slideShowTitle01.png" alt="" onclick="currentMainSlide(1)" class="main">
+                            <img src="./images/groups/collab.png" alt="" onclick="currentMainSlide(1)" class="main">
                         </span>
                         <span class="column">
                             <img src="./images/groups/cloneVsBranch.png" onclick="currentMainSlide(2)" alt="" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/groups/collab.png" onclick="currentMainSlide(3)" alt="" class="main">
+                            <img src="./images/init/CreateRepo.png" onclick="currentMainSlide(3)" alt="" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/groups/sharedRepo.png" onclick="currentMainSlide(4)" alt="" class="main">
+                            <img src="./images/init/ImportantInformation.png" onclick="currentMainSlide(4)" alt="" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/groups/pullRequestFlow.png" onclick="currentMainSlide(5)" alt="" class="main">
+                            <img src="./images/branching/gitBranch.png" onclick="currentMainSlide(5)" alt="" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/groups/pullRequestFlow02.png" onclick="currentMainSlide(6)" alt="" class="main">
+                            <img src="./images/branching/gitflow02.jpeg" onclick="currentMainSlide(6)" alt="" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/branching/gitBranch.png" onclick="currentMainSlide(7)" alt="" class="main">
-                        </span>
-                        <span class="column">
-                            <img src="./images/branching/gitflow02.jpeg" onclick="currentMainSlide(8)" alt="" class="main">
-                        </span>
-                        <span class="column">
-                            <img src="./images/branching/gitflow03.png" onclick="currentMainSlide(9)" alt="" class="main">
+                            <img src="./images/branching/gitflow03.png" onclick="currentMainSlide(7)" alt="" class="main">
                         </span>
                     </div>
                 </div>
