--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "f51bwox10s");
+    })(window, document, "clarity", "script", "f51bwox7s");
 </script>
     <title>Terminal / Git / Github</title>
 </head>
@@ -24,95 +24,73 @@
     <main>
         <h2>Click images or arrows to view more</h2>
         <div class="slideShow">
-            <img src="./images/gitAndGithub/slideShowTitle01.png" alt="Title Slide" onclick="openMainModal();currentMainSlide(1)">
+            <img src="./images/gitAndGithub/whatIs01.webp" alt="Title Slide" onclick="openMainModal();currentMainSlide(1)">
 
             <div id="myMainModal" class="modal">
                 <span class="close cursor" onclick="closeMainModal()">&times;</span>
 
                 <div class="modalContent">
 
-                    <button class="prev" onclick="plusMainSlides(-1)">&#10094;</button>
+                    <button class="prev" onclick="plusMainSlides(-1)">&#7094;</button>
 
                     <div class="mainSlides">
-                        <span class="numberText">1/10</span>
-                        <img src="./images/gitAndGithub/slideShowTitle01.png" alt="Title Slide" >
+                        <span class="numberText">1/7</span>
+                        <img src="./images/terminal/slideShowTitle01.png" alt="Title Slide" >
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">2/10</span>
-                        <img src="./images/gitAndGithub/whyGit.png" alt="Why Git" >
+                        <span class="numberText">2/7</span>
+                        <img src="./images/terminal/lookAndMove.png" alt="Terminal Commands01" >
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">3/10</span>
-                        <img src="./images/gitAndGithub/whatIs01.webp" alt="What is Git" >
+                        <span class="numberText">3/7</span>
+                        <img src="./images/terminal/stopFixRepeat.png" alt="Terminal Commands02" >
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">4/10</span>
-                        <img src="./images/gitAndGithub/whatIs02.png" alt="What is Git" >
+                        <span class="numberText">4/7</span>
+                        <img src="./images/terminal/dangerCommands.png" alt="Terminal Commands03" >
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">5/10</span>
-                        <img src="./images/gitAndGithub/whatIs03.png" alt="What is Git" >
+                        <span class="numberText">5/7</span>
+                        <img src="./images/flowCommands/slideShowTitle01.png" alt="Git Commands" >
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">6/10</span>
-                        <img src="./images/gitAndGithub/gitBenefits.png" alt="Benefits" >
+                        <span class="numberText">6/7</span>
+                        <img src="./images/flowCommands/commandFlow01.png" alt="Flow01" >
                     </div>
                     <div class="mainSlides">
-                        <span class="numberText">7/10</span>
-                        <img src="./images/gitAndGithub/gitLesson02.jpeg" alt="Benefits" >
+                        <span class="numberText">7/7</span>
+                        <img src="./images/flowCommands/commandFlow02.png" alt="Flow02" >
                     </div>
-                    <div class="mainSlides">
-                        <span class="numberText">8/10</span>
-                        <h2 class="img">Github isn't the only platform that uses Git</h2>
-                    </div>
-                    <div class="mainSlides">
-                        <span class="numberText">9/10</span>
-                        <img src="./images/gitAndGithub/hubVsLab.jpeg" alt="Github vs GitLab" >
-                    </div>
-                    <div class="mainSlides">
-                        <span class="numberText">10/10</span>
-                        <img src="./images/gitAndGithub/gitRepo.jpeg" alt="Repo" >
-                    </div>
-
-                    <button class="next" onclick="plusMainSlides(1)">&#10095;</button>
+                    <button class="next" onclick="plusMainSlides(1)">&#7095;</button>
 
                     <div class="row">
                         <span class="column">
-                            <img src="./images/gitAndGithub/slideShowTitle01.png" alt="What is Git and Github?" onclick="currentMainSlide(1)" class="main">
+                            <img src="./images/terminal/slideShowTitle01.png" alt="What is Git and Github?" onclick="currentMainSlide(1)" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/gitAndGithub/whyGit.png" alt="Why use git?" onclick="currentMainSlide(2)" class="main">
+                            <img src="./images/terminal/lookAndMove.png" alt="Terminal Commands" onclick="currentMainSlide(2)" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/gitAndGithub/whatIs01.webp" alt="" onclick="curentMainSlide(3)" class="main">
+                            <img src="./images/terminal/stopFixRepeat.png" alt="" onclick="curentMainSlide(3)" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/gitAndGithub/whatIs02.png" alt="" onclick="currentMainSlide(4)" class="main">
+                            <img src="./images/terminal/dangerCommands.png" alt="" onclick="currentMainSlide(4)" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/gitAndGithub/whatIs03.png" alt="" onclick="currenMainSlide(5)" class="main">
+                            <img src="./images/flowCommands/slideShowTitle01.png" alt="" onclick="currenMainSlide(5)" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/gitAndGithub/gitBenefits.png" alt="" onclick="currenMainSlide(6)" class="main">
+                            <img src="./images/flowCommands/commandFlow01.png" alt="" onclick="currenMainSlide(6)" class="main">
                         </span>
                         <span class="column">
-                            <img src="./images/gitAndGithub/gitLesson02.jpeg" alt="" onclick="currenMainSlide(7)" class="main">
-                        </span>
-                        <span class="column">
-                            <h2 onclick="currenMainSlide(8)" class="main">Github isn't the only platform that uses Git</h2>
-                        </span>
-                        <span class="column">
-                            <img src="./images/gitAndGithub/hubVsLab.jpeg" alt="" onclick="currenMainSlide(9)" class="main">
-                        </span>
-                        <span class="column">
-                            <img src="./images/gitAndGithub/gitRepo.jpeg" alt="" onclick="currenMainSlide(10)" class="main">
+                            <img src="./images/flowCommands/commandFlow02.png" alt="" onclick="currenMainSlide(7)" class="main">
                         </span>
                     </div>
                 </div> 
             </div>
         </div>
         <div class="slideShow">
-            <button class="left" onclick="plusAltDivs(-1)">&#10094;</button>
+            <button class="left" onclick="plusAltDivs(-1)">&#7094;</button>
 
             <div class="altSlides img">
                 <img src="./images/slideShowTitle01.png" alt="Title Slide">
@@ -130,7 +108,7 @@
                 <iframe src="https://css-mountain-picture.netlify.app/" frameborder="0" height="800px" width="800px"></iframe>
             </div>
             
-            <button class="right" onclick="plusAltDivs(1)">&#10095;</button>
+            <button class="right" onclick="plusAltDivs(1)">&#7095;</button>
         </div>
     </main>
     <footer-component></footer-component>
