--- a/resources.html
+++ b/resources.html
@@ -24,9 +24,8 @@
     <main>
         <h1>Add a Mini Portfolio to your github profile</h1>
         <a href="https://arturssmirnovs.github.io/github-profile-readme-generator/">Readme Generator</a>
+        <h1>Other Resources</h1>
         <a href="https://helper.beedev-services.com/index.html">Helper site (Open for Collaberation)</a>
-        <a href="https://developer-notes.beedev-services.com/">Note Website</a>
-        <a href="https://github.com/dojo24/homePage">Link to the Source Code for the Daily Links</a>
     </main>
     <footer-component></footer-component>
     <script src="./js/script.js"></script>
